--- a/src/assests/styles.css
+++ b/src/assests/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
@@ -12,4 +12,20 @@ body {
   
   button {
     cursor: pointer;
+  } */
+
+  .v-list-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .v--main{
+    min-height: 100vh;
+  }
+
+  .v-main__scroller {
+    max-width: 100%;
+    position: relative;
+    overflow-y: auto;
   }
