--- a/src/assests/styles.css
+++ b/src/assests/styles.css
@@ -14,13 +14,13 @@
     cursor: pointer;
   } */
 
-  .v-list-item {
+  /* .v-list-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 
-  .v--main{
+  .v-main{
     min-height: 100vh;
   }
 
@@ -28,4 +28,4 @@
     max-width: 100%;
     position: relative;
     overflow-y: auto;
-  }
+  } */
