--- a/src/assests/styles.css
+++ b/src/assests/styles.css
@@ -1,18 +1,19 @@
-/* body {
-    font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+body {
+    font-family: "Open Sans", sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
   }
   
-  a {
+  /* a {
     color: inherit;
     text-decoration: none;
   }
   
   button {
     cursor: pointer;
-  } */
+  }  */
 
   /* .v-list-item {
     display: flex;
