--- a/src/assests/styles.css
+++ b/src/assests/styles.css
@@ -1,11 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer base{
+  :root{
+    --color-primary: 200 16 46
+  }
+  
+}
 body {
     font-family: "Open Sans", sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    
   }
-  
+
+ 
   /* a {
     color: inherit;
     text-decoration: none;
